# sig2yar

./: .gitignore  CLAMAV_SIGNATURE_SUPPORT_CHECKLIST.md  Cargo.toml  Makefile.toml  README.ja.md  README.md  TODO.md  docker-compose.yml
.github/workflows/: CI.yml
scripts/: build-positive-corpus.sh  clamav-unpack.sh  clamav-update.sh  logical-scan-diff.sh
src/: args.rs  ir.rs  lib.rs  main.rs  parser.rs  yara.rs
src/parser/: cbc.rs  cdb.rs  cfg.rs  crb.rs  fp.rs  ftm.rs  hash.rs  hdu.rs  hsu.rs  idb.rs  ign.rs  ign2.rs  imp.rs  info.rs  ldu.rs  logical.rs  mdu.rs  msu.rs  ndb.rs  ndu.rs  pdb.rs  sfp.rs  wdb.rs
src/parser/logical/: expression.rs  subsig.rs  target_description.rs
src/parser/logical/subsig/: byte_comparison.rs  fuzzy_img.rs  macro_subsignature.rs  pcre.rs
tests/: clamav_db.rs  ir_pipeline.rs  yara_compile.rs  yara_rule.rs
