[package]
name = "sig2yar"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.101"
clap = { version="4.5.58", features=["derive"] }
hex = "0.4.3"
nom = "8.0.0"
thiserror = "2.0.18"

[dev-dependencies]
yara-x = "1.13.0"
